--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -8,7 +8,15 @@ header-includes:
 
 ## RLumCarlo `r RLumBuild::.get_pkg_version()` (`r Sys.Date()`)
 
+* Dummy
+
+# RLumCarlo 0.1.5 (2020-06-12)
+
 * Fix problem on CRAN Solaris
+
+# RLumCarlo 0.1.4 (2020-06-12)
+
+* Fix CRAN requests
 
 ## RLumCarlo 0.1.3 (2020-06-05) (never published on CRAN)
 
