--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.6.9000-1-bibliography.bib
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.6.9000-1-bibliography.bib
@@ -2,6 +2,6 @@
   title = {RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena},
   author = {Johannes Friedrich and Sebastian Kreutzer and Vasilis Pagonis and Christoph Schmidt},
   year = {2020},
-  note = {R package version 0.1.5},
+  note = {R package version 0.1.6.9000-1},
   url = {https://CRAN.R-project.org/package=RLumCarlo},
 }
