--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -11,6 +11,8 @@ header-includes:
 *This package version needs at least R >= 3.5.0.*
 
 * Update internal tests to function properly with `testthat >= 3.0.0` 
+* Correct several code-documentation mismatches (thanks to an anonymous 
+R Journal reviewer)
 
 # RLumCarlo 0.1.6 (2020-07-05)
 
