--- a/README.Rmd
+++ b/README.Rmd
@@ -71,7 +71,7 @@ This program is distributed in the hope that it will be useful, but WITHOUT ANY 
 
 The [development of RLumCarlo](https://github.com/R-Lum/RLumCarlo) benefited from the support by various funding bodies:
 
-* The initial work by Johannes Friedrich, Sebastian Kreutzer and Christoph Schmidt was supported by the [DFG (2015–2018, SCHM 3051/4-1, "Modelling quartz luminescence signal dynamics relevant for dating and dosimetry", SCHM 3051/4-1)](https://gepris.dfg.de/gepris/projekt/279969851). 
+* The initial work by Johannes Friedrich, Sebastian Kreutzer and Christoph Schmidt was supported by the DFG (2015–2018, SCHM 3051/4-1, "Modelling quartz luminescence signal dynamics relevant for dating and dosimetry", SCHM 3051/4-1). 
 
 * Later financial support was secured through the project *'ULTIMO: Unifying Luminescence Models of quartz and feldspar (German Academic Exchange Service) DAAD: Deutscher Akademischer Austauschdienst DAAD PPP USA 2018, ID: 57387041)'*. 
 
