--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ The **R** package RLumCarlo provides a collection of R functions modelling lumin
 [![Downloads](https://cranlogs.r-pkg.org/badges/grand-total/RLumCarlo)](https://www.r-pkg.org/pkg/RLumCarlo)
 [![R-CMD-check](https://github.com/R-Lum/RLumCarlo/workflows/GitHub Actions CI/badge.svg)](https://github.com/R-Lum/RLumCarlo/actions)
 [![Build status](https://ci.appveyor.com/api/projects/status/yxsmwa86jajhtesn?svg=true)](https://ci.appveyor.com/project/RLumSK/rlumcarlo)
-[![codecov](https://codecov.io/gh/R-Lum/RLumCarlo/branch/master/graph/badge.svg?token=W0q5JUInf7)](https://codecov.io/gh/R-Lum/RLumCarlo)
+[![codecov](https://app.codecov.io/gh/R-Lum/RLumCarlo/branch/master/graph/badge.svg?token=W0q5JUInf7)](https://app.codecov.io/gh/R-Lum/RLumCarlo)
 
 ## Installation
 
