--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,7 @@ The **R** package RLumCarlo provides a collection of R functions modelling lumin
 [![Project Status: Concept](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![CRAN](https://www.r-pkg.org/badges/version/RLumCarlo)](https://CRAN.R-project.org/package=RLumCarlo)
 [![DOI](https://zenodo.org/badge/82188344.svg)](https://zenodo.org/badge/latestdoi/82188344)
+[![CRAN DOI](https://img.shields.io/badge/doi-10.32614/CRAN.package.RLumCarlo-blue.svg)](https://doi.org/10.32614/CRAN.package.RLumCarlo)
 [![Downloads](https://cranlogs.r-pkg.org/badges/grand-total/RLumCarlo)](https://www.r-pkg.org/pkg/RLumCarlo)
 [![R-CMD-check](https://github.com/R-Lum/RLumCarlo/workflows/GitHub Actions CI/badge.svg)](https://github.com/R-Lum/RLumCarlo/actions)
 [![Build status](https://ci.appveyor.com/api/projects/status/yxsmwa86jajhtesn?svg=true)](https://ci.appveyor.com/project/RLumSK/rlumcarlo)
