--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.10-bibliography.bib
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.10-bibliography.bib
@@ -1,8 +1,8 @@
 @Manual{,
   title = {RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena},
   author = {Johannes Friedrich and Sebastian Kreutzer and Vasilis Pagonis and Christoph Schmidt},
-  year = {2024},
-  note = {R package version 0.1.10.9000-5},
+  year = {2025},
+  note = {R package version 0.1.10},
   url = {https://CRAN.R-project.org/package=RLumCarlo},
 }
 
